--- a/index.html
+++ b/index.html
@@ -80,10 +80,12 @@
       <div class="profile-card">
         <img src="images/photo-emily.jpg" alt="Dr Emily Duncan">
         <h3 style="margin-top: 0;">Dr Emily Duncan</h3>
-        <p>Emily is a marine conservation scientist with more than a decade of experience carrying out research, including as a team member for numerous expeditions.</p>
-        <p>Much of her work has focused on marine megafauna and plastic pollution, for which she was named on the Forbes 30 Under 30 list.
-          Emily is experienced in delivering large collaborative international projects, and feels passionately about combining high-quality science and conservation
-          with community engagement. She currently sits on the expert panel for DEFRA’s Ocean Community Empowerment and Nature (OCEAN) Grants Programme.</p>
+        <p>Emily is a marine conservation scientist with more than a decade of experience carrying out research — focusing on marine megafauna and plastic pollution, 
+          and serving as a team member on numerous expeditions.</p>
+        <p>Emily is experienced in delivering large international projects, and is passionate about combining high-quality science and conservation with community engagement. 
+          She enjoys working collaboratively, and building capacity within partner organisations to deliver positive and lasting change for both the environment and communities. 
+          Emily currently sits on the expert panel for DEFRA’s Ocean Community Empowerment and Nature (OCEAN) Grants Programme.</p>
+        
       </div>
     </div>
   </section>
