--- a/index.html
+++ b/index.html
@@ -32,16 +32,30 @@
       About Us
       <img src="images/logo-apex-notext-colour.png" alt="Apex logo" style="height: 25px; margin-left: 0.5rem;">
     </h1>
-      <p>
-        At <strong>Apex Science & Conservation</strong>, we provide scientific support and
-        deliver nature conservation research that is both <strong>rigorous</strong> and
-        <strong>relevant</strong> to real-world decisions.
-      </p>
-      <p>
-        We partner with <strong>NGOs</strong>, <strong>government agencies</strong> and
-        <strong>research institutions</strong>, bringing <strong>expertise</strong> and
-        <strong>capacity</strong> to deliver projects that might not otherwise be possible.
-      </p>
+    <p>
+      At <strong>Apex Science & Conservation</strong>, we provide trusted scientific support 
+      and deliver conservation research that is both <strong>rigorous</strong> and
+      <strong>relevant</strong> to real-world decisions.
+    </p>
+    <p>
+      We partner with <strong>NGOs</strong>, <strong>government agencies</strong> and 
+      <strong>research institutions</strong>, bringing <strong>expertise</strong> and 
+      <strong>capacity</strong> to deliver projects that might not otherwise be possible.
+    </p>
+    
+    <p>
+      Our approach is <strong>bespoke</strong>, <strong>cost-effective</strong>, and 
+      <strong>flexible</strong> — rooted in genuine collaboration, strong partnerships, and 
+      a wealth of knowledge and experience.
+    </p>
+    
+    <p>
+      We are committed to providing a <strong>reliable</strong>, <strong>diligent</strong>, 
+      and <strong>equitable</strong> service that empowers conservation, research, and 
+      international development organisations to achieve meaningful results for both 
+      nature and people.
+    </p>
+
   </section>
 
   <section>
